2.13.3 (unreleased)
-------------------

- Add error event


2.13.2 (2014-02-10)
-------------------

- Release as a separated package (previously in Zope2)