@@ -25,13 +25,25 @@ setup(
     author_email='zope-dev@zope.org',
     long_description=open('README.txt').read() + '\n' +
     open('CHANGES.txt').read(),
+    classifiers=[
+        "Development Status :: 5 - Production/Stable",
+        "Intended Audience :: Developers",
+        "License :: OSI Approved :: Zope Public License",
+        "Operating System :: OS Independent",
+        "Programming Language :: Python",
+        "Programming Language :: Python :: 2.6",
+        "Programming Language :: Python :: 2.7",
+        "Programming Language :: Python :: 3.4",
+        "Programming Language :: Python :: 3.5",
+        "Framework :: Zope2",
+        "Topic :: Software Development :: Libraries :: Python Modules",
+        ],
     packages=find_packages('src'),
     namespace_packages=['Products'],
     package_dir={'': 'src'},
     extras_require=dict(
         test=['transaction'],
         zope212=['AccessControl',
-                 'DocumentTemplate',
                  'Zope2']),
     install_requires=[
         'setuptools',
